[project]
name = "renesstuffdanboorutagget"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/crave33/RenesStuffDanbooruTagGet"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "crave33"
DisplayName = "RenesStuffDanbooruTagGet"
Icon = ""
